force-app/main/default/objects/Case_Public_Comment__c/Case_Public_Comment__c.object-meta.xml
<CustomObject>
    <label>Case Public Comment</label>
    <nameField>
        <displayFormat>CPC-{00000000}</displayFormat>
        <label>Case Public Comments#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Public Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>