force-app/main/default/objects/Case_Public_Comment__c/fields/CaseCommentId__c.field-meta.xml
<CustomField>
    <fullName>CaseCommentId__c</fullName>
    <label>CaseCommentId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>